--- a/css/index.css
+++ b/css/index.css
@@ -734,3 +734,386 @@ body {
   width: 681px;
   height: 381.13px;
 }
+
+.sponsors {
+  display: flex;
+  background: var(--bg-about);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 140px 220px;
+  gap: 100px;
+  isolation: isolate;
+  position: absolute;
+  width: 1922px;
+  height: 538px;
+  left: -1px;
+  top: 6587.22px;
+}
+
+.sponsors h1 {
+  width: 1482px;
+  height: 87px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 87px;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: var(--text-about);
+}
+
+.sponsors-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+  gap: 100px;
+  width: 1482px;
+  height: 71px;
+}
+
+.apps {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 140px 220px;
+  gap: 100px;
+  isolation: isolate;
+  position: absolute;
+  width: 1920px;
+  height: 750.8px;
+  left: 0px;
+  top: 7125.22px;
+}
+
+.apps-logo img {
+  width: 582px;
+  height: 470.8px;
+  top: 140px;
+  left: 220px;
+}
+
+.apps-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 60px;
+  width: 798px;
+  height: 468px;
+}
+
+.apps-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 24px;
+  width: 798px;
+  height: 345px;
+}
+
+.apps-text h1 {
+  width: 798px;
+  height: 261px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 87px;
+  line-height: 87px;
+  letter-spacing: -0.02em;
+  color: var(--text-color);
+}
+
+.apps-text p {
+  width: 798px;
+  height: 60px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: -0.02em;
+  color: var(--text-color);
+}
+
+.apps-heading a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 40px;
+  gap: 10px;
+  width: 194px;
+  height: 63px;
+  border-radius: 8px;
+}
+
+.apps-heading img {
+  position: absolute;
+  width: 2041.06px;
+  height: 700.4px;
+  left: -60.03px;
+  top: 9.78px;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 140px 220px;
+  gap: 60px;
+  isolation: isolate;
+  position: absolute;
+  width: 1919px;
+  height: 994.46px;
+  left: 0px;
+  top: 7876.02px;
+  background: var(--bg-about);
+}
+
+.testimonial h1 {
+  width: 1479px;
+  height: 84px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 84px;
+  text-align: center;
+  color: var(--text-about);
+}
+
+.testimonial_content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 32px;
+  width: 1479px;
+  height: 498.46px;
+}
+
+.testimonial_client1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 60px 40px;
+  gap: 60px;
+  width: 471.67px;
+  height: 498.46px;
+  background: var(--bg-about);
+  box-shadow: 15px 10px 50px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px 0px 40px;
+  gap: 32px;
+  width: 391.67px;
+  height: 223.46px;
+  border-bottom: 1px solid #212529;
+}
+
+.comment img {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 4px;
+  width: 86px;
+  height: 61.46px;
+}
+
+.comment .text {
+  width: 391.67px;
+  height: 90px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: -0.02em;
+  color: var(--text-about);
+}
+
+.testimonial_client1 .name-box {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding: 0px;
+  gap: 42px;
+  width: 383px;
+  height: 95px;
+}
+
+.testimonial_client2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 60px 40px;
+  gap: 60px;
+  width: 471.67px;
+  height: 498.46px;
+  background: #4f9cf9;
+  border-radius: 10px;
+}
+
+.free_trial {
+  display: flex;
+  background: var(--bg-color);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 140px 220px 32px;
+  gap: 200px;
+  position: absolute;
+  width: 1920px;
+  height: 705px;
+  left: 0px;
+  top: 8870.48px;
+}
+
+.free_trial-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 40px;
+  width: 608px;
+  height: 533px;
+}
+
+.free_trial-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 24px;
+  width: 608px;
+  height: 262px;
+}
+
+.free_trial-text h1 {
+  width: 608px;
+  height: 174px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 87px;
+  text-align: center;
+  letter-spacing: -0.02em;
+}
+
+.free_trial-text p {
+  width: 550px;
+  height: 64px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: -0.02em;
+}
+
+.free_trial-heading a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 40px;
+  gap: 10px;
+  width: 218px;
+  height: 59px;
+  border-radius: 10px;
+}
+
+.free_trial-heading p {
+  width: 367px;
+  height: 32px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: -0.02em;
+}
+
+.free_trial-heading img {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 40px;
+  width: 260px;
+  height: 60px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 140px 220px 32px;
+  gap: 200px;
+  position: absolute;
+  width: 1920px;
+  height: 474px;
+  left: 0px;
+  top: 9575.48px;
+  background: var(--bg-color);
+}
+
+.footer .content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 100px;
+  isolation: isolate;
+  width: 1480px;
+  height: 302px;
+}
+
+.content .info {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 100px;
+  width: 1480px;
+  height: 182px;
+}
+
+.info img {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 100px;
+  isolation: isolate;
+  width: 1480px;
+  height: 302px;
+  top: 282px;
+}
+
+.content .btm {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+  gap: 60px;
+  width: 1480px;
+  height: 20px;
+}
