--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@
   --flavescent: #ffe492;
   --lueberry: #4f9cf9;
   --lavender-blue: #c4defd;
+  --white-smoke: whitesmoke;
 }
 
 html {
@@ -27,13 +28,22 @@ img {
   max-width: 100%;
 }
 
-/* gap section */
-.first-section__content-top-section,
-.second-section__first-content,
-.second-section__second-content,
-.thirt-section__first-content,
-.four-section__first-content {
-  gap: 30px;
+/* margin left side */
+.first-section__content-top-section__left-side,
+.second-section__first-content__left-side,
+.thirt-section__first-content__left-side {
+  display: inline;
+  flex-wrap: wrap;
+  margin: 0 10px 0 0;
+}
+
+/* margin right side */
+.second-section__second-content__right-side,
+.four-section__first-content__right-side,
+.seven-section__first-content__right-side {
+  display: inline;
+  flex-wrap: wrap;
+  margin: 0 0 0 30px;
 }
 
 /* first section */
@@ -44,6 +54,7 @@ img {
 /* first section __ top header*/
 .first-section__top-header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 6vh 8vw;
 }
@@ -57,20 +68,20 @@ img {
 /* first section __ top header __ right side */
 .first-section__top-header__right-side {
   display: flex;
-  gap: 32px;
 }
 
 /* first section __ top header __ right side __ list function */
 .first-section__top-header__right-side__list-function {
   display: flex;
   align-items: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  margin: 0 20px 0 0;
 }
 
 /* first section __ top header __ right side __ list function __ child function */
 .first-section__top-header__right-side__list-function__child-function {
   display: flex;
-  gap: 10px;
+  margin: 0 10px 0 0;
 }
 
 .first-section__top-header__right-side__list-function__child-function h3 {
@@ -80,16 +91,18 @@ img {
 /* first section __ top header __ right side __ list button */
 .first-section__top-header__right-side__list-button {
   display: flex;
-  gap: 16px;
 }
 
 /* first section __ top header __ right side __ list button __ btn login*/
 .first-section__top-header__right-side__list-button__btn-login {
   background-color: var(--flavescent);
-  text-decoration: none;
   color: var(--black);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
   padding: 16px 40px;
   border-radius: 10px;
+  margin: 0 10px 0 0;
 }
 
 /* first section __ top header __ right side __ list button __ btn register*/
@@ -146,11 +159,6 @@ img {
 }
 
 /* first section __ content top section __ right side */
-.first-section__content-top-section__right-side__image-container {
-  background-color: var(--lavender-blue);
-  width: 750px;
-  height: 500px;
-}
 
 /* second section */
 #second-section {
@@ -178,6 +186,7 @@ img {
   margin: 24px 0 60px 0;
 }
 
+/* second section __ first content __ left side __ btn started*/
 .second-section__first-content__left-side__btn-started {
   display: flex;
   align-items: center;
@@ -194,11 +203,7 @@ img {
   font-size: 16px;
 }
 
-.second-section__first-content__right-side__image-container {
-  background-color: var(--lavender-blue);
-  width: 700px;
-  height: 500px;
-}
+/* second section __ first content __ left side __ right side*/
 
 /* second section __ second content */
 .second-section__second-content {
@@ -251,10 +256,9 @@ img {
   padding: 8vh 8vw;
 }
 
-/* thirt section __ first-content __ left-side*/
+/* thirt section __ first-content __ left-side */
 .thirt-section__first-content__left-side {
   color: var(--white);
-  margin: 0 20px 0 0;
 }
 
 .thirt-section__first-content__left-side h6 {
@@ -267,6 +271,7 @@ img {
   margin: 24px 0 60px 0;
 }
 
+/* thirt section __ first-content __ left-side __ btn get started */
 .thirt-section__first-content__left-side__btn-get-started {
   background-color: var(--lueberry);
   color: var(--white);
@@ -284,11 +289,6 @@ img {
 }
 
 /* thirt section __ first-content __ right-side*/
-.thirt-section__first-content__right-side__image-container {
-  background-color: var(--lavender-blue);
-  width: 650px;
-  height: 450px;
-}
 
 /* four section */
 #four-section {
@@ -304,11 +304,6 @@ img {
 }
 
 /* four section __ first content __ left side */
-.four-section__first-content__left-side__image-container {
-  background-color: var(--lavender-blue);
-  width: 700px;
-  height: 550px;
-}
 
 /* four section __ first content __ right side */
 .four-section__first-content__right-side h6 {
@@ -360,7 +355,6 @@ img {
 .four-section__second-content__board-list {
   display: flex;
   align-items: center;
-  gap: 20px;
 }
 
 /* four section __ second content __ board list __ child board 1*/
@@ -369,7 +363,7 @@ img {
   text-align: left;
   box-sizing: border-box;
   border-radius: 10px;
-  padding: 40px 44px;
+  padding: 40px 40px;
 }
 
 .four-section__second-content__board-list__child-board-1 h6 {
@@ -409,6 +403,8 @@ img {
   border: 1px solid var(--flavescent);
   color: var(--black);
   text-decoration: none;
+  display: flex;
+  width: fit-content;
   font-size: 18px;
   padding: 14px 22px;
   border-radius: 10px;
@@ -421,7 +417,8 @@ img {
   text-align: left;
   box-sizing: border-box;
   border-radius: 10px;
-  padding: 80px 44px;
+  padding: 80px 40px;
+  margin: 0 20px 0 20px;
 }
 
 .four-section__second-content__board-list__child-board-2 h6 {
@@ -459,6 +456,8 @@ img {
   background-color: var(--lueberry);
   color: var(--white);
   text-decoration: none;
+  display: flex;
+  width: fit-content;
   padding: 16px 24px;
   border-radius: 10px;
 }
@@ -467,7 +466,7 @@ img {
 .four-section__second-content__board-list__child-board-3 {
   border: 1px solid var(--flavescent);
   text-align: left;
-  padding: 40px 44px;
+  padding: 40px 40px;
   border-radius: 10px;
 }
 
@@ -506,6 +505,8 @@ img {
   border: 1px solid var(--flavescent);
   color: var(--black);
   text-decoration: none;
+  display: flex;
+  width: fit-content;
   font-size: 18px;
   padding: 14px 22px;
   border-radius: 10px;
@@ -521,6 +522,7 @@ img {
   color: var(--white);
   text-align: center;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 8vh 8vw;
 }
 
@@ -531,6 +533,7 @@ img {
 .five-section__first-content h5 {
   font-weight: normal;
   font-size: 16px;
+  margin: 24px 0 60px 0;
 }
 
 /* five section __ first content __ btn-try */
@@ -539,13 +542,191 @@ img {
   color: var(--white);
   width: fit-content;
   justify-content: center;
-  display: flex;
   text-decoration: none;
+  display: inline-flex;
   align-items: center;
-
-  gap: 10px;
+  padding: 16px 24px;
+  border-radius: 10px;
 }
 
 .five-section__first-content__btn-try h6 {
   font-size: 16px;
+  margin: 0 5px 0 0;
+}
+
+/* six section */
+#six-section {
+  background-color: var(--white);
+}
+
+/* six section __ first content */
+.six-section__first-content {
+  display: flex;
+  align-items: center;
+  padding: 8vh 8vw;
+}
+
+/* six section __ first content __ left side */
+.six-section__first-content__left-side {
+  display: inline;
+}
+
+.six-section__first-content__left-side h6 {
+  font-size: 64px;
+}
+
+.six-section__first-content__left-side h5 {
+  font-weight: normal;
+  font-size: 16px;
+  margin: 24px 0 60px 0;
+}
+
+/* six section __ first content __ left side __ btn try*/
+.six-section__first-content__left-side__btn-try {
+  background-color: var(--lueberry);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  width: fit-content;
+  padding: 16px 24px;
+  border-radius: 10px;
+}
+
+.six-section__first-content__left-side__btn-try h6 {
+  font-size: 16px;
+  margin: 0 10px 0 0;
+}
+
+/* six section __ first content __ right side */
+
+/* six section __ second content */
+.six-section__second-content {
+  padding: 8vh 8vw;
+}
+
+/* six section __ second content __ heading */
+.six-section__second-content__heading {
+  display: flex;
+  justify-content: center;
+}
+
+.six-section__second-content__heading h6 {
+  font-size: 64px;
+}
+
+/* six section __ second content __ sponsors */
+.six-section__second-content__sponsors {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.six-section__second-content__sponsors img {
+  margin: 117px 0;
+}
+
+/* seven section */
+#seven-section {
+  background-color: var(--ateneo-blue);
+}
+
+/* seven section __ first content */
+.seven-section__first-content {
+  display: flex;
+  align-items: center;
+  padding: 8vh 8vw;
+}
+
+/* seven section __ first content __ left side */
+
+/* seven section __ first content __ right side */
+.seven-section__first-content__right-side {
+  color: var(--white);
+  display: inline;
+}
+
+.seven-section__first-content__right-side h6 {
+  font-size: 40px;
+}
+
+.seven-section__first-content__right-side h5 {
+  font-weight: normal;
+  font-size: 16px;
+  margin: 16px 0 60px 0;
+}
+
+/* seven section __ first content __ right side  __ btn try */
+.seven-section__first-content__right-side__btn-try {
+  background-color: var(--lueberry);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  width: fit-content;
+  font-size: 16px;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.seven-section__first-content__right-side__btn-try img {
+  margin: 0 0 0 0.3rem;
+}
+
+/* eighth section */
+#eighth-section {
+  background-color: var(--white-smoke);
+}
+
+/* eighth section __ first content*/
+.eighth-section__first-content {
+  padding: 8vh 8vw;
+}
+
+/* eighth section __ first content __ heading */
+.eighth-section__first-content__heading {
+  display: flex;
+  justify-content: center;
+  font-size: 4rem;
+  margin: 0 0 3.9rem 0;
+}
+
+/* eighth section __ first content __ board list */
+.eighth-section__first-content__list-board {
+  display: flex;
+}
+
+/* eighth section __ first content __ board list __ child board 1 */
+.eighth-section__first-content__list-board__child-board-1 {
+  background-color: var(--white);
+}
+
+.eighth-section__first-content__list-board__child-board-1 > h6 {
+  font-weight: normal;
+  font-size: 1rem;
+  margin: 2rem 0 6rem 0;
+}
+
+/* eighth section __ first content __ board list __ child board 1 __ name box */
+.eighth-section__first-content__list-board__child-board-1__name-box {
+  display: flex;
+  align-items: center;
+}
+
+/* eighth section __ first content __ board list __ child board 1 __ name box __ right side*/
+.eighth-section__first-content__list-board__child-board-1__name-box__right-side {
+  display: inline;
+  margin: 0 0 0 2.6rem;
+}
+
+.eighth-section__first-content__list-board__child-board-1__name-box__right-side
+  h6 {
+  font-size: 1.5rem;
+}
+
+.eighth-section__first-content__list-board__child-board-1__name-box__right-side
+  h5 {
+  font-weight: normal;
+  font-size: 1rem;
+  margin: 1rem 0 0 0;
 }
