--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,10 @@ body {
   color: var(--text-color);
 }
 
+header {
+  background: #043873;
+}
+
 /* header */
 .header {
   position: fixed;
@@ -37,7 +41,6 @@ body {
   left: 0;
   width: 100%;
   padding: 22px 190px;
-  background: transparent;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -53,7 +56,7 @@ body {
   margin-right: 3.5rem;
 }
 
-.navbar a.login {
+.navbar .login {
   width: 78px;
   height: 1588px;
   padding: 16px 40px;
@@ -133,11 +136,21 @@ body {
   gap: 10px;
   width: 219px;
   height: 63px;
+  transition-property: background, width, height, color;
+  transition-duration: 0.5s;
+  transition-delay: 0.3s;
   border-radius: 8px;
   font-weight: 500;
   font-size: 16px;
   line-height: 23px;
   color: var(--text-color);
+}
+
+.btn:hover {
+  background: orangered;
+  width: 240px;
+  height: 76px;
+  color: var(--text-about);
 }
 
 .btn i {
@@ -718,7 +731,7 @@ body {
   color: var(--text-about);
 }
 
-.data .heading a {
+.heading a {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -840,6 +853,14 @@ body {
   color: var(--text-color);
 }
 
+.apps-text img {
+  position: absolute;
+  width: 2041.06px;
+  height: 700.4px;
+  left: -60.03px;
+  top: 9.78px;
+}
+
 .apps-heading a {
   display: flex;
   flex-direction: row;
@@ -850,14 +871,6 @@ body {
   width: 194px;
   height: 63px;
   border-radius: 8px;
-}
-
-.apps-heading img {
-  position: absolute;
-  width: 2041.06px;
-  height: 700.4px;
-  left: -60.03px;
-  top: 9.78px;
 }
 
 .testimonial {
@@ -898,6 +911,12 @@ body {
   height: 498.46px;
 }
 
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
 .testimonial_client1 {
   display: flex;
   flex-direction: column;
@@ -906,9 +925,19 @@ body {
   gap: 60px;
   width: 471.67px;
   height: 498.46px;
-  background: var(--bg-about);
+  background: #4f9cf9;
+  transition-property: background, width, height, border;
+  transition-duration: 0.5s;
+  transition-delay: 0.5s;
   box-shadow: 15px 10px 50px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+.testimonial_client1:hover {
+  background: var(--bg-about);
+  width: 550px;
+  height: 550px;
+  border: 2px solid black;
 }
 
 .comment {
@@ -962,8 +991,18 @@ body {
   gap: 60px;
   width: 471.67px;
   height: 498.46px;
+  transition-property: background, width, height, border;
+  transition-duration: 0.5s;
+  transition-delay: 0.5s;
   background: #4f9cf9;
   border-radius: 10px;
+}
+
+.testimonial_client2:hover {
+  background: var(--bg-about);
+  width: 550px;
+  height: 550px;
+  border: 2px solid black;
 }
 
 .free_trial {
@@ -1116,4 +1155,87 @@ body {
   gap: 60px;
   width: 1480px;
   height: 20px;
+}
+
+@media (max-width: 1440px) {
+  html {
+    font-size: 55%;
+  }
+
+  .header {
+    padding: 2rem 3%;
+    width: 1440px;
+    height: 92px;
+  }
+
+  .navbar {
+    width: 928.5px;
+    height: 60px;
+    padding: 17px;
+  }
+
+  .navbar a {
+    width: 551.5px;
+    height: 23px;
+    padding: 0px;
+    gap: 32px;
+  }
+
+  .navbar .login {
+    padding: 16px 40px;
+    gap: 10px;
+    width: 126px;
+    height: 60px;
+  }
+
+  .navbar .whitespace {
+    padding: 16px 24px;
+    gap: 10px;
+    width: 227px;
+    height: 60px;
+  }
+
+  .home {
+    padding: 100px 32px;
+    width: 1440px;
+    height: 656.39px;
+  }
+
+  .home-content {
+    width: 691px;
+    height: 361px;
+  }
+
+  .home-img {
+    gap: 3.33px;
+    width: 685px;
+    height: 456.39px;
+  }
+
+  .about {
+    padding: 140px 32px;
+    gap: 100px;
+    width: 1440px;
+    height: 1370.76px;
+  }
+
+  .about-content {
+    width: 1376px;
+    height: 448px;
+  }
+
+  .about-headline {
+    width: 657px;
+    height: 411px;
+  }
+
+  .about-headline .text-block {
+    width: 657px;
+    height: 288px;
+  }
+
+  .about-content img {
+    width: 719px;
+    height: 448px;
+  }
 }
