--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -81,7 +81,7 @@ header {
   padding-left: 20px;
 }
 
-.home {
+#home {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -108,7 +108,7 @@ header {
 .home-content h2 {
   width: 656px;
   height: 154px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 64px;
@@ -119,7 +119,7 @@ header {
 .home-content p {
   width: 656px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -171,7 +171,7 @@ header {
   height: 549px;
 }
 
-.about {
+#about {
   background: var(--bg-about);
   display: flex;
   flex-direction: column;
@@ -222,7 +222,7 @@ header {
   width: 672px;
   height: 174px;
   color: var(--text-about);
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -234,7 +234,7 @@ header {
   color: var(--text-about);
   width: 672px;
   height: 90px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -298,7 +298,7 @@ header {
 .work-together h1 {
   width: 670px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -310,7 +310,7 @@ header {
 .work-together p {
   width: 670px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -379,7 +379,7 @@ header {
 .extension-text h1 {
   width: 697px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -399,7 +399,7 @@ header {
 .extension-text p {
   width: 697px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -469,7 +469,7 @@ header {
 }
 
 .customise-text h1 {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -481,7 +481,7 @@ header {
 .customise-text p {
   width: 669px;
   height: 90px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -531,7 +531,7 @@ header {
 .plan-heading h1 {
   width: 1481px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -544,7 +544,7 @@ header {
 .plan-heading p {
   width: 979px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -639,7 +639,7 @@ header {
 .section6-text h1 {
   width: 1064px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -651,7 +651,7 @@ header {
 .section6-text p {
   width: 1064px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -710,7 +710,7 @@ header {
 .text-block h1 {
   width: 800px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -722,7 +722,7 @@ header {
 .text-block p {
   width: 800px;
   height: 90px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -767,7 +767,7 @@ header {
 .sponsors h1 {
   width: 1482px;
   height: 87px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -832,7 +832,7 @@ header {
 .apps-text h1 {
   width: 798px;
   height: 261px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 87px;
@@ -844,7 +844,7 @@ header {
 .apps-text p {
   width: 798px;
   height: 60px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -892,7 +892,7 @@ header {
 .testimonial h1 {
   width: 1479px;
   height: 84px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 70px;
@@ -964,7 +964,7 @@ header {
 .comment .text {
   width: 391.67px;
   height: 90px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -1043,7 +1043,7 @@ header {
 .free_trial-text h1 {
   width: 608px;
   height: 174px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 72px;
@@ -1055,7 +1055,7 @@ header {
 .free_trial-text p {
   width: 550px;
   height: 64px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -1079,7 +1079,7 @@ header {
 .free_trial-heading p {
   width: 367px;
   height: 32px;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
